# epsrc-sim-data-collection

./: .gitignore  package.xml  setup.cfg  setup.py
models/: good.json  poor.json  realistic.json
sim_data_collection/: data_collector.py  live_data_collector.py  main.py  sqlite_serializer.py  utils.py
sim_data_collection/analysis/: analysis.py  analysis_main.py  dataset.py  health_check_main.py  integrity_check.py  simulation_visualiser.py  vehicle_model.py
sim_data_collection/data_collector/: live_data_collector.py  main.py  sqlite_serializer.py
sim_data_collection/perception_model/: __init__.py  main.py  model.py  simulated_perception_node.py
