<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_data_collection</name>
  <version>0.0.0</version>
  <description>This package serializes ROS messages from simulation runs into a database in which the relationships between emssages are directly exposed.</description>
  <maintainer email="josephagrane@gmail.com">Joseph Agrane</maintainer>
  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>eufs_msgs</exec_depend>
  <exec_depend>ugrdv_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
